# skinvision-ai

./: .gitignore  README.md  debug_quality_all_classes.py  find_all_files.py  pyproject.toml
api/: config.py  dependencies.py  face_validator.py  main.py  models.py
api/recommendations/: __init__.py  engine.py  loader.py  schemas.py
api/recommendations/kb/: acne_ingredients.v1.yaml
api/routers/: health.py  predict.py
api/tests/: conftest.py  test_health.py  test_predict.py  test_recommendations.py
frontend/: app.js  index.html  style.css
phase0/: __init__.py
phase0/config/: phase0.yaml
phase0/notebooks/: 01_dataset_analysis.ipynb
phase0/scripts/: 01_build_manifest.py  02_run_eda.py  03_audit_quality.py  04_cluster_faces.py  05_generate_splits.py  06_generate_report.py  run_all.py
phase0/src/: __init__.py  eda.py  face_clustering.py  image_quality.py  report_generator.py  split_generator.py
phase0/src/ingestion/: __init__.py  base.py  coco_json_adapter.py  factory.py  folder_adapter.py  manifest_builder.py  metadata_jsonl_adapter.py
phase0/src/utils/: __init__.py  io.py  logging.py  visualisation.py
phase0/tests/: conftest.py  test_eda.py  test_face_clustering.py  test_image_quality.py  test_split_generator.py
phase1/: __init__.py
phase1/config/: phase1.yaml
phase1/scripts/: __init__.py  predict.py  train.py
phase1/src/: __init__.py  dataset.py  inference.py  metrics.py  model.py  trainer.py  transforms.py
phase1/tests/: __init__.py  conftest.py  test_dataset.py  test_inference.py  test_metrics.py  test_model.py
reports/phase0/: feasibility_report.md
(+4 files in other folders)
