[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skincare-ai"
version = "0.2.0"
description = "AI Skincare Assistant — Phase 0 Data Validation + Phase 1 Model Training"
requires-python = ">=3.10"

[project.optional-dependencies]
phase0 = [
    # Core
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "rich>=13.0",

    # Image I/O & processing
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",

    # Face detection (quality audit)
    "mediapipe>=0.10",

    # Face recognition / embedding (leakage detection)
    "insightface>=0.7",
    "onnxruntime>=1.16",

    # Clustering & ML utilities
    "scikit-learn>=1.3",
    "scipy>=1.11",

    # Visualisation
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # Notebook
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
]

phase1 = [
    # Deep learning
    "torch>=2.5",
    "torchvision>=0.20",
    "timm>=1.0",

    # Augmentation
    "albumentations>=1.3",

    # Shared with phase0
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "Pillow>=10.0",
]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["phase0/tests", "phase1/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
